# kachaka-api

docs/: ROS2.md
ros2/kachaka_description/robot/: kachaka.urdf.xacro
ros2/kachaka_description/urdf/: _kachaka.gazebo.xacro  _kachaka.urdf.xacro
ros2/kachaka_gazebo/: CMakeLists.txt  package.xml
ros2/kachaka_gazebo/config/: kachaka_ros2_controller_params.yaml
ros2/kachaka_gazebo/launch/: kachaka_gazebo_bringup.launch.py
ros2/kachaka_gazebo/rviz/: default.rviz
ros2/kachaka_gazebo/world/: world.sdf
